# fastnum

./: .gitignore  CHANGES.md  Cargo.toml  README.md  TODO.md  build.rs  build_tests.rs
.github/workflows/: ci.yml
benchmark/: Cargo.toml
benchmark/benches/decimal/: _macro.rs  allocation.rs  from_f64.rs  parse.rs  recip.rs  sqrt.rs  to_f64.rs
benchmark/benches/int/: math.rs
doc/: LIB.md
examples/debug_display/: Cargo.toml
examples/debug_display/src/: main.rs
src/: decimal.rs  int.rs  lib.rs  sign.rs  u256.rs  utils.rs
src/bint/int/impls/: cast.rs
src/bint/intrinsics/: powers.rs  transmute.rs  u128.rs
src/bint/intrinsics/u128/: powers.rs
src/bint/uint/: powers.rs
src/bint/uint/math/: mul.rs
src/decimal/: dec.rs  error.rs  extras.rs  flags.rs  impls.rs  macros.rs  math.rs  parse.rs  rounding.rs  serde.rs  signals.rs  signed.rs  udec.rs  unsigned.rs
src/decimal/dec/: cmp.rs  construct.rs  consts.rs  control_block.rs  extra_precision.rs  extras.rs  round.rs  scale.rs  utils.rs
src/decimal/dec/control_block/: context.rs  extra_precision.rs  flags.rs  signals.rs
src/decimal/dec/convert/: to_float.rs
src/decimal/dec/extras/: rust_decimal.rs  serde.rs
src/decimal/dec/impls/: fmt.rs  hash.rs  ord.rs  to.rs
src/decimal/dec/math/: acos.rs  acosh.rs  add.rs  asin.rs  atan.rs  atan2.rs  atanh.rs  consts.rs  div.rs  exp.rs  exp2.rs  ln.rs  log2.rs  mul.rs  nth_root.rs  pow.rs  powi.rs  recip.rs  rem.rs  sin.rs  sqrt.rs  sub.rs  utils.rs
src/decimal/dec/parse/: from_float.rs  from_str.rs
src/decimal/extras/: diesel.rs  serde.rs  utils.rs
src/decimal/extras/utils/: db.rs
src/decimal/impls/: fmt.rs  from_str.rs  num.rs
src/decimal/math/: f32.rs  f64.rs
src/decimal/signed/: extras.rs  impls.rs  parse.rs  sign.rs
src/decimal/signed/extras/: diesel.rs  serde.rs  utoipa.rs
src/decimal/signed/impls/: cmp.rs  fmt.rs  from.rs  from_str.rs  hash.rs
src/decimal/udec/: extras.rs
src/decimal/udec/extras/: serde.rs
src/decimal/udec/impls/: ord.rs  to.rs
src/decimal/unsigned/: extras.rs  format.rs  impls.rs  parse.rs
src/decimal/utils/: fmt.rs
src/int/: error.rs  macros.rs  parse.rs
src/u256/: error.rs  macros.rs  parse.rs
tests/: tests.rs
tests/decimal/: common.rs  d128.rs  d256.rs  d512.rs  extras.rs  hash.rs  mod.rs  parse.rs  scale.rs  ud128.rs  ud256.rs  ud512.rs
tests/decimal/common/: cmp.rs  extras.rs  hash.rs  to.rs
tests/decimal/d128/: cmp.rs  extras.rs  hash.rs
tests/decimal/d256/: cmp.rs  from.rs  hash.rs  parse.rs  scale.rs
tests/decimal/d512/: cmp.rs
tests/decimal/extras/: rust_decimal.rs  serde.rs
tests/decimal/ud128/: cmp.rs
tests/decimal/ud256/: fmt.rs  from.rs  parse.rs  scale.rs
tests/decimal/ud512/: extras.rs  from.rs
tests/int/: mod.rs
tests/int/u256/: parse.rs
tests/u256/: parse.rs
(+29 files in other folders)
