[package]
name = "fastnum"
version = "0.0.2"
edition = "2021"
authors = ["Neo"]
description = "Fast numbers library"
documentation = "https://docs.rs/fastnum"
homepage = "https://github.com/neogenie/fastnum"
repository = "https://github.com/neogenie/fastnum"
keywords = [
    "numeric",
    "decimal",
    "arbitrary-precision",
]
categories = ["mathematics", "science", "no-std"]
license = "MIT"
autobenches = false
rust-version = "1.82"

[lib]
bench = false

[dependencies]

num-traits = { version = "0.2", default-features = false }
const-str = { version = "0.5", default-features = false }

serde = { version = ">= 1.0.0", default-features = false, optional = true }
serde_json = { version = ">=0.8.0, <2.0", default-features = false, optional = true }
diesel = { version = ">=2.2.4", default-features = false, optional = true }
utoipa = { version = ">= 4.0.0", default-features = false, optional = true }

bnum = { version = "0.12.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = { version = "0.23.0" }
serde_test = { version = ">= 1.0.0" }

[build-dependencies]
autocfg = "1"

[features]
default = ["std"]
std = ["num-traits/std"]
serde = ["dep:serde", "dep:serde_json"]
diesel = ["dep:diesel"]
utoipa = ["dep:utoipa"]
string-only = []
test-util = []

[[test]]
name = "tests"
required-features = ["test-util"]
build = "build_tests.rs"

[[bench]]
name = "benchmark"
harness = false
